10 Aug 25 
    6 pm
        Created a basic layout of the website, implemented basic functionality for 
        selecting the basic tourist spots, cities, etc.
    7 pm
        used react context to make all user inputs global
        change updates.txt to changelog.txt and moved it to root
    9 pm 
        added geoapify api function calls to autocomplete a city search
    9:15 pm
        disables the buttons until a valid city is selected from the suggestions
    11 pm
        disables the  buttons until the form is complete in both bestplan and customplan

11 Aug 25  
    7pm
        fixed logic for isformvalid in bestplan
        created a reuable component for arrivalmode selection form to re-use it
    8pm 
        added api call to get tourist spots when city is selected
        added a new array to conext that stores the tourist spots
        implemented a better system to load the tourist spots in customplan