@@ -7,6 +7,7 @@ export default function Home() {
   const { city, setCity, setTouristSpots } = useCityHopper();
   const [suggestions, setSuggestions] = useState([]);
   const [validcity, setValidCity] = useState(false);
+  const [loading, setLoading] = useState(false);
 
   const handleInputChange = async (e) => {
     const value = e.target.value;
@@ -24,8 +25,10 @@ export default function Home() {
     setCity(suggestion.label);
     setSuggestions([]);
     setValidCity(true);
+    setLoading(true);
     const spots = await fetchTouristSpots({ lon: suggestion.lon, lat: suggestion.lat });
     setTouristSpots(spots);
+    setLoading(false);
   };
   return (
     <div className="flex flex-col items-center justify-center h-screen bg-gray-50">
@@ -51,14 +54,17 @@ export default function Home() {
           ))}
         </ul>
       )}
+      {loading  && <p className="text-blue-500">Loading tourist spots...</p>}
+      <p className="text-sm text-gray-500 mb-4">
+        {validcity ? "City is valid. Select a plan." : "Please enter a valid city."}</p>
       <div className="flex gap-4">
         <Link to="/custom-plan">
-          <button disabled = {!validcity} className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
+          <button disabled = {!validcity||loading} className="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">
             Custom Plan
           </button>
         </Link>
         <Link to="/best-plan">
-          <button disabled={!validcity} className="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
+          <button disabled={!validcity||loading} className="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">
             Best Plan
           </button>
         </Link>
